# Tehiru-Homework-assignment

./: .gitignore  README.md
drone_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
drone_ws/install/liftoff_interface/lib/liftoff_interface/: attitude_adapter  controller  drone_activator  drone_controller  liftoff_bridge  mock_obstacle_publisher  sensor_listener  target_navigation_service  target_selector
drone_ws/install/liftoff_interface/share/liftoff_interface/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
drone_ws/install/liftoff_telemetry/lib/liftoff_telemetry/: liftoff_telemetry_node
drone_ws/log/: latest_build  latest_list  latest_test  latest_test-result
drone_ws/src/liftoff_interface/: package.xml  setup.cfg  setup.py
drone_ws/src/liftoff_interface/launch/: drone_control.launch.py  test_system.launch.py
drone_ws/src/liftoff_interface/liftoff_interface/: altitude_controller.py  drone_activator.py  flight_controller.py  sensor_listener.py
drone_ws/src/liftoff_telemetry/: setup.cfg  setup.py
drone_ws/src/liftoff_utils/: CMakeLists.txt
drone_ws/src/virtual_controller/: package.xml  setup.cfg  setup.py
drone_ws/src/virtual_ps_controller/: CMakeLists.txt  package.xml
drone_ws/src/virtual_ps_controller/include/virtual_ps_controller/: ps_controller.hpp
drone_ws/src/virtual_ps_controller/launch/: virtual_ps_controller.launch.py
drone_ws/src/virtual_ps_controller/src/: controller.cpp  ps_controller.cpp  ps_controller_node.cpp  virtual_ps_controller_node.py
drone_ws/src/virtual_ps_controller/virtual_ps_controller/: __init__.py  ps4_constants.py  ps_controller_node.py
(+146 files in other folders)
